--- a/January/2023-01-16.md
+++ b/January/2023-01-16.md
@@ -1,5 +1,5 @@
 
-# 파이썬 강의
+# 프로그래밍
 
 - 소프트웨어 : 컴퓨터에서 일 시키는 도구
 
@@ -47,7 +47,7 @@
 - 소스 코드를 컴퓨터가 이해할 수 있는 기계어로 번역
 - 파이썬의 경우 인터프리터를 사용
 
-## 파이썬의 특징
+## 파이썬
 
 - 다른 프로그래밍 언어에 비해 문법이 간단하며, 엄격하지 않음
   
@@ -65,13 +65,6 @@
 - 코드가 길어지면 한 줄 씩 입력하는 것은 무리가 있음 -> 파일로 실행하기 (git bash 실행하고 cd desttop, python {실행할 파이썬 파일 이름}.py )
 
 
-## VS Code
-
-- 마이크로소프트가 만든 무료 개발용 텍스트 에디터
-  
-- 메모장인데, 개발에 편한 기능이 들어있음
-  
-- 확장프로그램을 통해 더 많은 기능을 부착해서 나만의 개발환경을 만들 수 있음
 
 ## 파이썬 개발 환경 종류
 1. IDE
@@ -87,6 +80,15 @@
     - 웹 : Visual Studio Code
       - HTML/CSS,Django,Javascript,Vue 등 모두 개발하기 편한 환경
     - 알고리즘 : Pycharm
+
+
+## VS Code
+
+- 마이크로소프트가 만든 무료 개발용 텍스트 에디터
+  
+- 메모장인데, 개발에 편한 기능이 들어있음
+  
+- 확장프로그램을 통해 더 많은 기능을 부착해서 나만의 개발환경을 만들 수 있음
 
 
 ## 변수와 식별자
@@ -229,7 +231,7 @@ print(x,y) #20 10
 
 **Srring Interpolation**
 
-ex : 
+ex 
 ```python
 print(f'Hello, {name}! 성적은 {score}')
 # hello, Kim! 성적은 4.5
@@ -247,4 +249,206 @@ print(f'Hello, {name}! 성적은 {score}')
   - \\\ : \
   - \' : 단일인용부호(')
   - \" : 이중인용부호(")
+
+### None
+- 파이썬 자료형 중 하나
+- 값이 없음을 표현하기 위해 None이 존재
+
+### 불린형
+- 논리 자료형으로 참과 거짓을 표현하는 자료형
+- True 또는 falus를 값으로 가짐
+- 비교 / 논리 연산에서 활용됨
+
+### 비교 연산자
+- 수학에서 등호와 부등호와 동일한 개념
+- 주로 조건문에 사용되며 값을 비교할 때 사용
+- 결과로 True 또는 falus를 값을 반환함
+- Ex : <, >, ==, !=, is, is not
+  - is : 객체 아이덴티티(주소값이 동일한지)
+  - is not : 객체 아이덴티티가 아닌 경우
+
+### 논리 연산자
+- 여러 가지 조건이 있을 떄
+  - 모든 조건을 만족하거나(and), 여러 조건중 하나만 만족해도 될 때(or) 특정 코드를 실행하고 싶을 때 사용
+  - 일반적으로 비교연산자와 함께 사용됨
+
+- Falsy : false 는 아니지만 false로 취급 되는 다양한 값
+  - 0,0.0,(),[],{},""(빈 문자열)
+- 논리 연산자도 우선순위가 존재
+  - not, and, or 순으로 우선순위가 높음 (괄호 사용하여 우선순위 조절할 것)
+- Ex
+  ```python
+  print(not True) #false
+  print(not 0) #True
+  print(not 'hi') #false
+  ```
+
+#### 논리 연산자의 단축 평가
+- 결과가 확실한 경우 두번째 값은 확인하지 않고 첫번째 값 반환
+- and 연산에서 첫번째 값이 false인 경우 무조건 false -> 첫번째 값 반환
+- or 연산에서 첫번째 값이 True인 경우 무조건 True -> 첫번째 값 반환
+
+# 컨테이너
+- 여러 개의 값(데이터)을 담을 수 있는 것(객체)으로, 서로 다른 자료형을 저장할 수 있음
+  - 예시 : List
+- 컨테이너의 분류
+  - 순서가 있는 데이터 vs 순서가 없는 데이터
+
+- 컨테이너의 분류
+  - 시퀀스형 : 리스트,튜플(불변형),레인지(불변형)
+  - 비시퀀스형 : 세트,딕셔너리
+
+## 시퀀스형 컨테이너
+### 리스트 : 여러 개의 값을 순서가 있는 구조로 저장하고 싶을 때 사용
+
+- 리스트의 생성과 접근
+  - 리스트는 대괄호 혹은 list()를 통해 생성
+    - 파이썬에서는 어떠한 자료형도 저장할 수 있으며, 리스트 안에 리스트도 넣을 수 있음
+    - 생성된 이후 내용이 변경이 가능 -> 가변 자료형
+    - 이러한 유연성 때문에 파이썬에서 가장 흔히 사용
   
+  
+- 순서가 있는 시퀀스로 인덱스를 통해 접근 가능
+  - 값에 대한 접근은 list[i]
+  
+
+### 튜플
+- 여러 개의 값을 순서가 있는 구조로 저장하고 싶을 때 사용
+  - 리스트와의 차이점은 생성 후, 담고 있는 값 변경이 불가
+- 항상 소괄호 형태로 사용
+
+#### 튜플의 생성과 접근
+- 소괄호(()) 혹은 tuple()을 통해 생성
+- 튜플은 수정 불가능한 시퀀스로 인덱스로 접근 가능
+- 값에 대한 접근은 my_typle[i]
+
+**튜플 생성 주의사항**
+- 단일 항목의 경우
+  - 하나의 항목으로 구성된 튜플은 생성시 값 뒤에 쉼표를 붙여야 함
+- 복수 항목의 경우
+  - 마지막 항목에 붙은 쉼표는 없어도 되지만, 넣은 것을 권장
+
+
+```python
+tuple_a = (1, )
+tuple_a = 1, 
+tuple_b = (1,2,3,)
+tuple_b = 1,2,3,
+```
+### 세트
+- 중괄호( '{ }' )를 이용해서 요소(원소)들을 함께 모으는 방법
+- 리스트와 비슷하지만 순서 구분이 없고, 중복을 허락하지 않음
+- 수학에서 쓰이는 집합과 같은 성질
+
+
+```python 
+list = [5,4,1,1,2,2,3]
+s= set(list)
+print(s)
+
+s2 = set((2,4,6)) # (2,4) -> tuple
+print(s2)
+
+print(s - s2) # 차집합
+print(s & s2) # 교집합 
+print(s | s2) # 합집합
+```
+
+
+
+### Range의 정의
+- 숫자의 시퀀스를 나타내기 위해 사용
+- 주로 반복문과 함께 사용됨
+  
+### Range의 기본 사용 방법
+- 기본형 : range(n)
+  - 0부터 n-1까지의 숫자의 시퀀스
+- 범위 지정 : range(n,m)
+  - n부터 m-1까지의 숫자의 시퀀스
+  - EX : range(0,10,2)
+    - 0부터 10보다 작을때까지 2씩 증가
+
+### 슬라이싱 연산자
+#### 시퀀스를 특정 단위로 슬라이싱
+- 인덱스와 콜론을 사용하여 문자열의 특정 부분만 잘라낼 수 있음
+- 슬라이싱을 이용하여 문자열을 나타낼 때 콜론을 기준으로 앞 인덱스에 해당하는 문자는 포함되지만 인덱스에 해당 문자는 미포함
+
+
+
+
+```python
+print([1,2,3,5][1:4]) #[2,3,5]
+
+print((1,2,3)[:1]) # (1,2) , 1이전 -> 0번째 1번째 인덱스 출력
+
+print((1,2,3)[1:]) # (2,3) , 1이후 -> 1번째 2번째 인덱스 출력
+
+print(range(10)[5:8]) #range(5,8)
+
+print('abcd'[2:4]) # cd
+
+# s = 'abcdefghi'
+
+# s[2:5] - > 'cde'
+
+  ```
+
+## 비시퀀스형 컨테이너
+
+### 딕셔너리
+- 키-값(key-value) 쌍으로 이뤄진 자료형
+- Dictionary의 키(key)
+  - key는 변경 불가능한 데이터만 활용 가능
+    - string,integer,float,boolean,tuple,range
+- 각 키의 값(value)
+  - 어떠한 형태든 관계없음
+
+#### 딕셔너리 생성
+- 증괄호({}) 혹은 dict()을 통해 생성
+- key를 통해 value에 접근
+
+
+```python
+dict_a = {'a' : 'apple', 'b' : 'banana', 'list' : [1,2,3]}
+print(dict_a) # {'a': 'apple', 'b': 'banana', 'list': [1, 2, 3]}
+print(dict_a['list']) #[1,2,3]
+
+dict_b = dict(a='apple', b= ' banana', list = [1,2,3])
+print(dict_b) # {'a': 'apple', 'b': 'banana', 'list': [1, 2, 3]}
+
+```
+
+### 형변환
+- 데이터 형태는 서로 변환할 수 있음
+- 암시적 형 변환
+  - 사용자가 의도하지 않고, 파이썬 내부적으로 자료형을 변환하는 경우
+  
+
+```python
+print(True) + 3 # 4 -> True가 1(int)로 변환
+print(3 + 5.0) # 8.0 -> 정수형 + 실수형 -> 정수 3을 실수로 변환해서 연산
+```
+
+
+
+- 명시적 형 변환
+  - 사용자가 특정 함수를 활용하여 의도적으로 자료형을 변환하는 경우
+    - str, float -> int
+    - str, int -> float
+    - int, float,list,tuple,dict ->str
+    - 단 형식에 맞는 문자열만 정수로 변환 가능
+```python
+print('3' + 4) # eror
+print(int('3') + 4) # 7
+print(int('3.5') +5) #eror 
+
+print('3.5' + 3.5) # eror
+print(float('3')) # 3.0
+print(float('3/4') + 5.3)
+
+print(str(1)) # 1
+print(str(1.0)) # 1.0
+print(str([1,2,3])) #[1,2,3]
+```
+
+
