--- a/January/2023-01-17.md
+++ b/January/2023-01-17.md
@@ -4,3 +4,202 @@
 - 특정 상황에 따라 코드를 선택적으로 실행(분기/조건)하거나 계속하여 실행(반복)하는 제어가 필요함
 - 제어문은 순서도로 표현이 가능
 
+## 코드 스타일 가이드
+- 코드를 '어떻게 작성하지'에 대한 가이드 라인
+- 파이썬에서 제안하는 스타일 가이드
+  - PEP8
+- 각회사/프로젝트마다 따로 스타일 가이드를 설정하기도 함
+  - Google Style guide
+
+### 들여쓰기
+- Space Sensitive
+  - 문장을 구분할 때, 중괄호({,}) 대신 들여쓰기를 사용
+  - 들여쓰기를 할 때는 4칸 혹은 1탭을 입력 -> 혼용 금지
+    - TAP으로 들여쓰면 계속 TAP으로 들여써야 함
+    - 원칙적으로는 공백 사용을 권장
+
+
+## 조건문
+- 조건문은 참/거짓을 판단할 수 있는 조건식과 함께 사용
+
+### 기본형식
+- 조건이 참인 경우 이후 들여쓰기 되어있는 코드 블록을 실행
+- 이외의 경우 else 이후 들여쓰기 되어있는 코드 블록을 실행
+  - else는 선택적으로 활용할 수 있음
+
+### 조건표현식
+- 조건 표현식이란
+  - 조건 표현식을 일반적으로 조건에 따라 값을 정할 때 활용
+  - 삼항 연산자로 부르기도 함
+  - 빈 list, 빈 tuple, 빈 문자열("") -> false
+  - ex : true인 경우 값 if 조건 else false
+```python
+value = num if num >=0 else -num # 절대값을 저장하기 위한 코드
+```
+
+## 반복문
+- 특정 조건을 만족할 때까지 같은 동작을 계속 반복하고 싶을 때 사용
+  
+- 반복문 종류
+  - while 문
+    - 종료 조건에 해당하는 코드를 통해 반복문을 종료시켜야 함
+    - 조건을 알고 있을 때 사용하기 용이
+  - for 문
+    - 반복가능한 객체를 모두 순회하면 종료(별도의 종료 조건이 필요없음)
+    - 반복의 횟수를 알고 있을 때 사용하기 용이
+  - 반복 제어
+    - break, continue, for-else
+
+### while문
+- while문은 조건식이 참인 경우 반복적으로 코드를 실행
+  - 조건이 참인 경우 들여쓰기 되어 있는 코드 블록이 실행됨
+  - 코드 블록이 모두 실행되고,다시 조건식을 검사하며 반복적으로 실행됨
+  - while문은 무한 루프를 하지 않도록 종료 조건이 반드시 필요
+```python
+while 조건 :
+```
+  
+### for문
+- for문은 시퀀스(string,tuple,list,range)를 포함한 순회 가능한 객체의 요소를 모두 순회
+  - 처음부터 끝까지 모두 순회하므로 별도의 종료 조건이 필요하지 않음
+- iterable
+  - 순회할 수 있는 자료형(string,list,dict,tuple,range,set 등)
+  - 순회형 함수
+
+
+
+```python
+for fruit in ['apple','mango','banana'] :
+    print(fruit)
+print('끝')
+
+'''
+apple
+mango
+banana
+끝
+'''
+chars = input()
+# happy
+
+for char in chars:
+    print(char)
+
+'''
+h
+a
+p
+p
+y
+'''
+# 마지막 글자가 널이기 때문에 for문 종료
+
+for idx in range(len(chars)): # 문자열 순회
+    print(chars[idx])
+```
+#### 추가 메서드를 활용한 딕셔너리 순회
+- key() : key로 구성된 결과
+- values() : value로 구성된 결과
+- items() : (Key,value)의 튜플로 구성된 결과
+
+
+```python
+grade = {'hojn' : 80, 'eric' : 90}
+for student in grades: # 딕셔너리 순회
+    print(student,grades[student])
+
+'''
+john 80
+eric 90
+'''
+grade = {'john' : 80, 'eric' : 90}
+
+print(grade.keys())
+print(grade.value())
+print(grade.items())
+'''
+dict_keys{['john','eric']}
+dict_values{[80,90]}
+dict_keys{[('john', 80), ('eric', 90)]}
+
+'''
+
+grade = {'john' : 80, 'eric' : 90}
+for student, grade in grades.items():
+    print(student,grade)
+
+'''
+john 80
+eric 90
+'''
+```
+
+#### enumerate 순회
+- enumerate()
+  - 인덱스와 객체를 쌍으로 담은 열거형 객체 반환
+    - (index,value)형태의 tuple로 구성된 열거 객체를 반환
+```python
+members = ['민수', '영희', '철수']
+
+for idx,number in enumerate(members):
+    print(idx,number)
+'''
+0 민수
+1 영희
+2 철수
+'''
+
+members = ['민수', '영희', '철수']
+enumerate(members)
+print(list(enumerate(members))) # [(0, '민수'),(1,'영희'), (2,'철수')]
+print(list(enumerate(members,start=1))) # [(1, '민수'),(2,'영희'), (3,'철수')]
+
+```
+
+### List Comprehension
+- 표현식과 제어문을 통해 특정한 값을 가진 리스트를 간결하게 생성하는 방법
+  - [code] for 변수 in iterable]
+  - [code] for 변수 in iterable if 조건식]
+
+```python
+cubic_list = []
+for number in range(1,4):
+    cubic_list.append(number ** 3) # append = 추가
+print(cubic_list)
+
+#[1, 8, 27]
+
+cubic_list = [number ** 3 for number in range(1,4)]
+print(cubic_list)
+
+#[1, 8, 27]
+```
+### Dictionary Comprehension
+- 표현식과 제어문을 통해 특정한 값을 가진 딕셔너리를 간결하게 생성하는 방법
+
+```python
+cubic_dict= {}
+
+for numnber in range(1,4):
+    cubic_dict[number] = number ** 3
+print(cubic_dict)
+
+# {1: 1, 2: 8, 3: 27}
+
+cubic_dict = {number: number ** 3 for number in range(1,4)}
+print(cubic_dict)
+
+# {1: 1, 2: 8, 3: 27}
+
+```
+
+### 반복문 제어
+- break
+  - 반복문을 종료
+- continue
+  - continue 이후의 코드 블록은 수행하지 않고, 다음 반복을 수행
+- for-else
+  - 끝까지 반복문을 실행한 이후에 else문 실행
+    - break를 통해 중간에 종료되는 경우 else문은 실행되지 않음
+- pass
+  - 아무것도 하지 않음(문법적으로 필요하지만, 할 일이 없을 때 사용)
