--- a/January/제어문(조건문, 반복문).md
+++ b/January/제어문(조건문, 반복문).md
@@ -203,3 +203,28 @@ print(cubic_dict)
     - break를 통해 중간에 종료되는 경우 else문은 실행되지 않음
 - pass
   - 아무것도 하지 않음(문법적으로 필요하지만, 할 일이 없을 때 사용)
+
+```python
+# 문자열내에서 특정 문자 찾는 코드
+for char in 'apple':
+    if char == 'b' :
+        print('b!')
+        break
+    else:
+        print('b가 없습니다')
+
+# b가 없습니다 
+
+for char in 'banana':
+    if char == 'b' :
+        print('b!')
+        break
+    else:
+        print('b가 없습니다')
+
+# b! 
+
+
+
+
+```
