--- a/January/1-3. 함수와 범위(Scope).md
+++ b/January/1-3. 함수와 범위(Scope).md
@@ -34,7 +34,7 @@
   - 선언과 호출
   - 입력
   - 문서화
-  - ~~범위~~
+  - 범위
   - 결과값
 
 ### 선언과 호출
@@ -133,13 +133,13 @@ def add(x,y) :
   - built - in scope
     - 파이썬이 실행된 이후부터 영원히 유지
   - global scope
-    - 모듈이 호출된 시점 이후 혹은 인터프리터가 끝날 때까지 유지
+    - 모듈이 호출된 시점 이후 부터 인터프리터가 끝날 때까지 유지
   - local scope
     - 함수가 호출될 때 생성되고, 함수가 종료될 때까지 유지
     - 
 ### Name space
 - 이름을 기억하는 공간
-1. built - in Name space : 
+1. built - in Name space : 내장함수(ex : print(),len())
 2. global Name space : .py 파일 실행할 때 생성
 3. enclosing Name space : 함수 내부에서 생성
 4. local Name space : 함수 내부안의 함수 내부에서 생성
@@ -156,7 +156,16 @@ def add(x,y) :
     - ex : print()
   - **함수 내에서는 바깥 Scope의 볌수에 접근 가능하나 수정은 할 수 없음** 
 
-
+## 함수의 범위
+### global 문
+- 현재 코드 블록 전체에 적용되며, 나열된 식별자가 global variable임을 나타냄
+  - global에 나열된 이름은 같은 코드 블록에서 global 앞에 등장할 수 없음
+  - global에 나열된 이름은 parameter, for 루프 대상, 클래스/함수 정의 등을 정의되지 않아야 함
+### nonlocal 문
+- global을 제외하고 가장 가까운(둘러싸고 있는)scope 변수를 연결하도록 함
+  - nonlocal에 나열된 같은 코드 블록에서 nonlocal 앞에 등장할 수 없음
+  - nonlocal에 나열된 이름은 parameter, for 루프 대상, 클래스/함수 정의 등을 정의되지 않아야 함
+  - global과는 달리 이미 존재하는 이름과의 연결만 가능
 ```python
 x = 1
 
