--- a/January/1-3. 함수와 범위(Scope).md
+++ b/January/1-3. 함수와 범위(Scope).md
@@ -139,7 +139,7 @@ def add(x,y) :
     - 
 ### Name space
 - 이름을 기억하는 공간
-1. built - in Name space : 내장함수(ex : print(),len())
+1. built - in Name space : 내장함수(ex : print(),len()) 
 2. global Name space : .py 파일 실행할 때 생성
 3. enclosing Name space : 함수 내부에서 생성
 4. local Name space : 함수 내부안의 함수 내부에서 생성
@@ -167,6 +167,7 @@ def add(x,y) :
   - nonlocal에 나열된 이름은 parameter, for 루프 대상, 클래스/함수 정의 등을 정의되지 않아야 함
   - global과는 달리 이미 존재하는 이름과의 연결만 가능
 ```python
+# global 사용 예시
 x = 1
 
 def func1():
@@ -187,6 +188,8 @@ print(x)
 2
 3
 '
+# nonlocal 사용 예시
+
 x = 1
 
 def func1():
@@ -207,6 +210,7 @@ print(x)
 3
 1
 '
+# 에러 예시
 
 def func():
     a = 20
