--- a/January/1-3. 함수와 범위(Scope).md
+++ b/January/1-3. 함수와 범위(Scope).md
@@ -167,7 +167,7 @@ def add(x,y) :
   - nonlocal에 나열된 이름은 parameter, for 루프 대상, 클래스/함수 정의 등을 정의되지 않아야 함
   - global과는 달리 이미 존재하는 이름과의 연결만 가능
 ```python
-# global 사용 예시
+# global 사용 예시 1
 x = 1
 
 def func1():
@@ -188,6 +188,14 @@ print(x)
 2
 3
 '
+
+# global 사용 예시 2
+def func1():
+  global out 
+  out = 3 # 글로벌에 변수생성후 3대입
+
+func1()
+print(out) # 3
 # nonlocal 사용 예시
 
 x = 1
