--- a/January/1-4 함수 응용 및 모듈과 패키지.md
+++ b/January/1-4 함수 응용 및 모듈과 패키지.md
@@ -138,3 +138,8 @@ print(sub(1, 2))
 
 ```
 
+## 가상환경
+- 파이썬 표준 라이브러리가 아닌 외부 패키지와 모듈을 사용하는 경우
+- 특정 디렉토리에 가상 환경을 만들고,고유한 파이썬 집합을 가질 수 있음
+  - 특정 폴더에 가상환경이 있고
+  - 실행 환경에서 가상환경을 활성화 시켜 해당 폴더에 있는 패키지를 관리/사용함
