--- a/January/2-1 객체 지향 프로그래밍.md
+++ b/January/2-1 객체 지향 프로그래밍.md
@@ -49,8 +49,8 @@
 - 클래스로 만든 객체를 인스턴스 라고도 함
   - 객체와 인스턴스의 차이점
     - 이찬혁은 객체다(O)
-    - 이찬혁은 인스턴스가(O)
-    - 이찬혁은 가수의 인스턴스다(X)
+    - 이찬혁은 인스턴스가(X)
+    - 이찬혁은 가수의 인스턴스다(O)
 
 ## 객체의 특징
 - 타입 :어떤 연산자와 조작이 가능한가
