--- a/January/2-1 객체 지향 프로그래밍.md
+++ b/January/2-1 객체 지향 프로그래밍.md
@@ -58,10 +58,16 @@
 - 조작법: 어떤 행위(함수)를 할 수 있는가
 
 ### 기본 문법
-- 클래스 정의
-- 인스턴스 생성
-- 메서드 호출
-- 속성 접근
+```python
+class Myclass: # 클래스 정의
+  pass
+
+my_instance = Myclass # 인스턴스 생성
+
+my_instance.my_method() # 메서드 호출
+
+my_instance.my_attribute # 속성 접근
+```
 
 ## 객체 비교하기
 - ==
